--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,10 @@
     <title>Les 250 Pays officiels</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <h1>Drapeaux du Monde</h1>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1>Drapeaux du Monde</h1>
     <div id="root"></div>
-    </div> 
-    </div>
-    </div>
+
     
   </body>
 </html>
